feat(infrastructure): 重构缓存架构并增强异常处理
- feat(cache): 新增 IFgaCacheProvider 接口，支持本地缓存和 Redis 多层缓存
- feat(cache): 新增 FgaCacheProperties 配置类，支持 fga.cache.type 配置
- feat(cache): 实现 LocalOnlyCacheProvider 本地缓存提供者
- feat(cache): 实现 RedisMultiLayerCacheProvider 多层缓存提供者
- refactor(cache): 重构 FgaCacheManager，简化代码并委托给 CacheProvider
- feat(common): 新增 SystemException 系统异常类
- fix(infrastructure): 修复租户拦截器 DefaultTenantLineInnerInterceptor 逻辑
- feat(starter): 增强 GlobalExceptionHandler 异常处理
- feat(api): 为 Request/Response/Command DTO 添加必要字段
- chore(config): 优化 application.properties 和 logback-spring.xml 配置